# Rust-Web-Crawler-with-Data-Analysis

./: Cargo.toml  amazon_debug.html
src/: main.rs
