[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]

url         = "2.5"    
structopt   = "0.3"    
serde_json  = "1.0"    
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.20"
encoding_rs = "0.8"
anyhow = "1"